--- a/src/components/GlobalStyle/GlobalStyle.scss
+++ b/src/components/GlobalStyle/GlobalStyle.scss
@@ -2,9 +2,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Noto+Serif&family=Open+Sans&family=Poppins&family=Raleway:wght@400;700&family=Roboto:wght@300;400;500;700&display=swap');
 
 :root{
-    --primary-color: #fe2c55
+    --primary-color: #fe2c55;
+    --default-layout-header-height: 60px;
+    --default-layout-width: 1150px;
 }
 *{
+    padding: 0;
+    margin: 0;
     box-sizing: border-box;
 }
 html{
