--- a/src/components/GlobalStyle/GlobalStyle.scss
+++ b/src/components/GlobalStyle/GlobalStyle.scss
@@ -3,6 +3,9 @@
 
 :root{
     --primary-color: #fe2c55;
+    --black:#434343;
+    --text-color: #333;
+    //default layout
     --default-layout-header-height: 60px;
     --default-layout-width: 1150px;
 }
@@ -19,4 +22,18 @@ body{
     font-family: 'Roboto', sans-serif;
     font-size: 1.6rem;
     line-height: 1.5;
+    color: var(--text-color);
+}
+
+input, button, [tabindex]{
+    outline: none;
+    border: none;
+}
+
+a[href]{
+    color: var(--text-color)
+}
+
+a{
+    text-decoration: none;
 }
