--- a/src/pages/Layouts/components/Header/Header.module.scss
+++ b/src/pages/Layouts/components/Header/Header.module.scss
@@ -1,4 +1,8 @@
 .wrapper{
+    --search-border-radius: 92px;
+    --search-height: 46px;
+    --search-top-spacer: 9px;
+    --search-width-btn: 52px;
     height: var(--default-layout-header-height);
     width: 100%;
     box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
@@ -9,4 +13,76 @@
 .inner{
     height: 100%;
     width: var(--default-layout-width);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
+
+
+.search{
+    display: flex;
+    width: 361px;
+    height: var(--search-height);
+    position: relative;
+    padding-left: 16px;
+    border-radius: var(--search-border-radius);
+    background-color: rgba(22, 24, 35, 0.06);
+    border: 1.5px solid transparent;
+    &::after{
+        content: '';
+        position: absolute;
+        top: var(--search-top-spacer);
+        right: var(--search-width-btn);
+        height: calc(var(--search-height) - (var(--search-top-spacer) * 2));
+        width: 1px;
+        background-color: #a2a2a7;
+    }
+    &:focus-within{
+        border-color: rgba(22, 24, 35, 0.2);
+    }
+    input{
+        flex-grow: 1;
+        background: transparent;
+        height: 100%;
+        font-size: 1.6rem;
+        font-weight: 400;
+        line-height: 22px;
+        color: var(--black);
+        caret-color: var(--primary-color);
+    }
+}
+
+//if input not empty icon search change color
+input:not(:placeholder-shown) ~ .search-btn{
+    color: rgba(22, 24, 35, 0.75)
+}
+
+.clear-btn,
+.loading{
+    color: rgba(22, 24, 35, 0.34);
+    position: absolute;
+    right: calc(var(--search-width-btn) + 16px);
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.search-btn{
+    width: var(--search-width-btn);
+    height: 100%;
+    background-color: transparent;
+    padding: 11px 16px 11px 12px;
+    border-top-right-radius: var(--search-border-radius);
+    border-bottom-right-radius: var(--search-border-radius);
+    font-size: 2.4rem;
+    color: #a2a2a7;
+
+    &:hover{
+        background: rgba(22, 24, 35, 0.03);
+        cursor: pointer;
+    }
+
+    &:active{
+        background-color:  rgba(22, 24, 35, 0.06);
+    }
+}
+
