--- a/src/components/GlobalStyle/GlobalStyle.scss
+++ b/src/components/GlobalStyle/GlobalStyle.scss
@@ -5,15 +5,19 @@
     --primary-color: #fe2c55;
     --black:#434343;
     --text-color: #333;
+    --white: #fff;
+
     //default layout
     --default-layout-header-height: 60px;
     --default-layout-width: 1150px;
 }
+
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
+
 html{
     font-size: 62.5%;
 }
