--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -1,12 +1,13 @@
 .wrapper{
     display: inline-flex;
     align-items: center;
+    justify-content: center;
     font-size: 1.6rem;
     font-weight: 700;
     line-height: 22px;
     min-height: 36px;
     min-width: 100px;
-    padding: 7px 28px;
+    padding: 6px 8px;
     border-radius: 4px;
     border: 1px solid transparent;
     background-color: var(--white);
@@ -25,7 +26,11 @@
 .icon + .title, .title + .icon {
     margin-left: 8px;
 }
-
+.icon{
+    display: inline-block;
+    width: 24px;
+    text-align: center;
+}
 //Type button
 .rounded{
     box-shadow: 0 2px 8px rgb(0 0 0 / 6%);
