--- a/src/components/Layouts/components/Header/Header.module.scss
+++ b/src/components/Layouts/components/Header/Header.module.scss
@@ -100,3 +100,11 @@ input:not(:placeholder-shown) ~ .search-btn{
     }
 }
 
+.menu{
+    font-size: 2rem;
+    height: 20px;
+    width: 20px;
+    padding: 0 4px;
+    margin-left: 16px;
+    background: transparent;
+}
