--- a/src/components/Layouts/components/Header/Header.module.scss
+++ b/src/components/Layouts/components/Header/Header.module.scss
@@ -16,6 +16,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 0 var(--default-layout-horizontal-spacer);
 }
 
 .search, 
@@ -107,4 +108,5 @@ input:not(:placeholder-shown) ~ .search-btn{
     padding: 0 4px;
     margin-left: 16px;
     background: transparent;
+    cursor: pointer;
 }
