--- a/src/components/GlobalStyle/GlobalStyle.scss
+++ b/src/components/GlobalStyle/GlobalStyle.scss
@@ -4,7 +4,7 @@
 :root{
     --primary-color: #fe2c55;
     --black:#434343;
-    --text-color: #333;
+    --text-color: rgba(22, 24, 35, 1.0);
     --white: #fff;
 
     //default layout
@@ -41,4 +41,23 @@ a[href]{
 
 a{
     text-decoration: none;
+}
+
+//custom tippy
+
+body .tippy-box{
+    background-color: rgba(84, 84, 84, 0.92);
+    color: rgb(255, 255, 255);
+    font-size: 1.6rem;
+    font-weight: 600;
+    padding: 3px;
+    border-radius: 8px;
+
+    .tippy-arrow{
+        color: rgba(84, 84, 84, 0.92);
+    }
+
+    &[data-placement^=bottom]>.tippy-arrow{
+        top: -1px;
+    }
 }
