--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -7,6 +7,7 @@
 
     .menu-item{
         margin-left: 0;
+        color: var(--text-color);
     }
 }
 
@@ -23,6 +24,10 @@
     &:hover{
         background: rgba(22, 24, 35, 0.03);
         border-radius: 0;
+    }
+
+    &.separate{
+        border-top: 1px solid rgba(22, 24, 35, 0.12);
     }
 }
 
