--- a/src/components/Layouts/components/Header/Header.module.scss
+++ b/src/components/Layouts/components/Header/Header.module.scss
@@ -145,5 +145,13 @@ input:not(:placeholder-shown) ~ .search-btn{
     margin-left: 24px;
 }
 
+.btn-messages{
+    position: relative;
+
+    &::after{
+        content: '';
+    }
+}
+
 
 
