--- a/src/components/Layouts/components/Header/Header.module.scss
+++ b/src/components/Layouts/components/Header/Header.module.scss
@@ -19,89 +19,6 @@
     padding: 0 var(--default-layout-horizontal-spacer);
 }
 
-//search
-.search, 
-.search-result{
-    width: 361px;
-}
-
-.search{
-    display: flex;
-    
-    height: var(--search-height);
-    position: relative;
-    padding-left: 16px;
-    border-radius: var(--search-border-radius);
-    background-color: rgba(22, 24, 35, 0.06);
-    border: 1.5px solid transparent;
-
-    &::after{
-        content: '';
-        position: absolute;
-        top: var(--search-top-spacer);
-        right: var(--search-width-btn);
-        height: calc(var(--search-height) - (var(--search-top-spacer) * 2));
-        width: 1px;
-        background-color: #a2a2a7;
-    }
-
-    &:focus-within{
-        border-color: rgba(22, 24, 35, 0.2);
-    }
-    
-    input{
-        flex-grow: 1;
-        background: transparent;
-        height: 100%;
-        font-size: 1.6rem;
-        font-weight: 400;
-        line-height: 22px;
-        color: var(--black);
-        caret-color: var(--primary-color);
-    }
-}
-
-.search-title{
-    height: 30px;
-    padding: 5px 12px;
-    font-weight: 600;
-    color: rgba(22, 24, 35, 0.5);
-}
-
-//if input not empty icon search change color
-input:not(:placeholder-shown) ~ .search-btn{
-    color: rgba(22, 24, 35, 0.75)
-}
-
-.clear-btn,
-.loading{
-    color: rgba(22, 24, 35, 0.34);
-    position: absolute;
-    right: calc(var(--search-width-btn) + 16px);
-    top: 50%;
-    transform: translateY(-50%);
-}
-
-.search-btn{
-    width: var(--search-width-btn);
-    height: 100%;
-    background-color: transparent;
-    padding: 11px 16px 11px 12px;
-    border-top-right-radius: var(--search-border-radius);
-    border-bottom-right-radius: var(--search-border-radius);
-    font-size: 2.4rem;
-    color: #a2a2a7;
-
-    &:hover{
-        background: rgba(22, 24, 35, 0.03);
-        cursor: pointer;
-    }
-
-    &:active{
-        background-color:  rgba(22, 24, 35, 0.06);
-    }
-}
-
 //action
 .actions{
     display: flex;
@@ -134,6 +51,24 @@ input:not(:placeholder-shown) ~ .search-btn{
     background-color: transparent;
     cursor: pointer;
     margin-left: 16px;
+    position: relative;
+
+    .quantity{
+        position: absolute;
+        top: -6px;
+        right: -8px;
+        background-color: var(--primary-color);
+        min-width: 20px;
+        height: 20px;
+        border-radius: 10px;
+        font-family: 'ProximaNova',sans-serif;
+        font-size: 1.4rem;
+        font-weight: 600;
+        color: rgb(255,255,255);
+        text-align: center;
+        line-height: 20px;
+        padding-top: 2px;
+    }
 }
 
 .avatar{
@@ -145,13 +80,6 @@ input:not(:placeholder-shown) ~ .search-btn{
     margin-left: 24px;
 }
 
-.btn-messages{
-    position: relative;
-
-    &::after{
-        content: '';
-    }
-}
 
 
 
