Logic for header, Fetch - handle api search

--- a/src/components/Layouts/components/Search/Search.module.scss
+++ b/src/components/Layouts/components/Search/Search.module.scss
@@ -61,6 +61,19 @@ input:not(:placeholder-shown) ~ .search-btn{
     transform: translateY(-50%);
 }
 
+.loading{
+    animation: spinner 0.8s linear infinite;
+}
+
+@keyframes spinner {
+    from {
+        transform: translateY(-50%) rotate(0) ;
+    }
+    to{
+        transform: translateY(-50%) rotate(360deg) ;
+    }
+}
+
 .search-btn{
     width: var(--search-width-btn);
     height: 100%;
