--- a/src/components/Layouts/components/Search/Search.module.scss
+++ b/src/components/Layouts/components/Search/Search.module.scss
@@ -37,6 +37,7 @@
         line-height: 22px;
         color: var(--black);
         caret-color: var(--primary-color);
+        font-family: var(--font-family);
     }
 }
 
