--- a/src/components/Layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/src/components/Layouts/DefaultLayout/DefaultLayout.module.scss
@@ -5,10 +5,11 @@
 }
 
 .container{
+    display: flex;
+    margin-top: var(--default-layout-header-height);
     width: var(--default-layout-width);
     padding: 0 var(--default-layout-horizontal-spacer);
     min-height: 1000px;
-    display: flex;
 }
 
 .content{
