--- a/src/components/Layouts/components/Header/Header.module.scss
+++ b/src/components/Layouts/components/Header/Header.module.scss
@@ -3,11 +3,17 @@
     --search-height: 46px;
     --search-top-spacer: 9px;
     --search-width-btn: 52px;
-    height: var(--default-layout-header-height);
-    width: 100%;
-    box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
+    
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
     display: flex;
     justify-content: center;
+    height: var(--default-layout-header-height);
+    width: 100%;
+    background-color: var(--white);
+    box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
 }
 
 .inner{
@@ -17,6 +23,10 @@
     align-items: center;
     justify-content: space-between;
     padding: 0 var(--default-layout-horizontal-spacer);
+}
+
+.logo{
+    display: flex;
 }
 
 //action
@@ -61,7 +71,7 @@
         min-width: 20px;
         height: 20px;
         border-radius: 10px;
-        font-family: 'ProximaNova',sans-serif;
+        font-family: var(--font-family);
         font-size: 1.4rem;
         font-weight: 600;
         color: rgb(255,255,255);
