--- a/src/layouts/components/Search/Search.module.scss
+++ b/src/layouts/components/Search/Search.module.scss
@@ -32,6 +32,7 @@
         flex-grow: 1;
         background: transparent;
         height: 100%;
+        margin-right: 40px;
         font-size: 1.6rem;
         font-weight: 400;
         line-height: 22px;
